// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumbs examples CustomItemsBreadcrumbsComponent should render correctly 1`] = `
<div
  id="root0"
>
  <nav
    aria-label="breadcrumbs with custom items"
    class="v-breadcrumbs v-breadcrumbs-custom"
    hasinlineseparator=""
    v-breadcrumbs=""
  >
    <ol>
      
      
      
      
      
      
      
    </ol>
  </nav>
</div>
`;

exports[`Breadcrumbs examples CustomSeparatorBreadcrumbsComponent should render correctly 1`] = `
<div
  id="root1"
>
  <nav
    aria-label="breadcrumbs with custom separator"
    class="v-breadcrumbs"
    separator="+"
    style="--v-breadcrumbs-pseudo-separator: '+';"
    v-breadcrumbs=""
  >
    <ol>
      <li>
        <a
          class="v-link"
          href="/breadcrumbs"
          routerlink="./breadcrumbs"
          v-link=""
        >
          L1 label
        </a>
      </li>
      <li>
        <a
          class="v-link"
          href="/breadcrumbs"
          routerlink="./breadcrumbs"
          v-link=""
        >
          L2 label
        </a>
      </li>
      <li>
        <a
          class="v-link"
          href="/breadcrumbs"
          routerlink="./breadcrumbs"
          v-link=""
        >
          L3 label
        </a>
      </li>
      <li>
        <span
          aria-current="page"
        >
          L4 label
        </span>
      </li>
    </ol>
  </nav>
</div>
`;

exports[`Breadcrumbs examples DefaultBreadcrumbsComponent should render correctly 1`] = `
<div
  id="root2"
>
  <nav
    aria-label="default breadcrumbs"
    class="v-breadcrumbs"
    v-breadcrumbs=""
  >
    <ol>
      <li>
        <a
          class="v-link"
          href="/breadcrumbs"
          routerlink="./breadcrumbs"
          v-link=""
        >
          L1 label
        </a>
      </li>
      <li>
        <a
          class="v-link"
          href="/breadcrumbs"
          routerlink="./breadcrumbs"
          v-link=""
        >
          L2 label
        </a>
      </li>
      <li>
        <a
          class="v-link"
          href="/breadcrumbs"
          routerlink="./breadcrumbs"
          v-link=""
        >
          L3 label
        </a>
      </li>
      <li>
        <span
          aria-current="page"
        >
          L4 label
        </span>
      </li>
    </ol>
  </nav>
</div>
`;

exports[`Breadcrumbs examples DynamicBreadcrumbsComponent should render correctly 1`] = `
<div
  id="root6"
>
  <div
    class="v-gap-4 v-flex v-flex-row v-mb-24"
    vflex=""
    vgap="4"
    vmb="24"
  >
    <button
      class="v-button"
      type="button"
      v-button=""
    >
      Add a crumb
    </button>
    <button
      class="v-button"
      type="button"
      v-button=""
    >
      Remove crumb
    </button>
  </div>
  <nav
    aria-label="dynamic breadcrumbs"
    class="v-breadcrumbs"
    v-breadcrumbs=""
  >
    <ol>
      <li>
        
        <a
          class="v-link"
          href="/"
          v-link=""
        >
          L1 label
        </a>
        
      </li>
      <li>
        
        <a
          class="v-link"
          href="/components/accordion"
          v-link=""
        >
          L2 label
        </a>
        
      </li>
      <li>
        <span
          aria-current="page"
        >
          L3 label
        </span>
        
        
      </li>
      
    </ol>
  </nav>
</div>
`;

exports[`Breadcrumbs examples InlineSeparatorBreadcrumbsComponent should render correctly 1`] = `
<div
  id="root3"
>
  <nav
    aria-label="breadcrumbs with inline separator"
    class="v-breadcrumbs v-breadcrumbs-custom"
    hasinlineseparator=""
    v-breadcrumbs=""
  >
    <ol>
      <li>
        <a
          class="v-link"
          href="/breadcrumbs"
          routerlink="./breadcrumbs"
          v-link=""
        >
          L1 label
        </a>
        <span>
          |
        </span>
      </li>
      <li>
        <a
          class="v-link"
          href="/breadcrumbs"
          routerlink="./breadcrumbs"
          v-link=""
        >
          L2 label
        </a>
        <span>
          |
        </span>
      </li>
      <li>
        <a
          class="v-link"
          href="/breadcrumbs"
          routerlink="./breadcrumbs"
          v-link=""
        >
          L3 label
        </a>
        <span>
          |
        </span>
      </li>
      <li>
        <span
          aria-current="page"
        >
          L4 label
        </span>
      </li>
    </ol>
  </nav>
</div>
`;

exports[`Breadcrumbs examples ServiceBasedActiveCrumbBreadcrumbsComponent should render correctly 1`] = `
<div
  id="root4"
>
  <nav
    aria-label="breadcrumbs with service-based active crumb"
    class="v-breadcrumbs"
    v-breadcrumbs=""
  >
    <ol>
      <li>
        
        <span
          aria-current="page"
        >
          L1 label
        </span>
        
      </li>
      
      
      
      
      
      
    </ol>
  </nav>
</div>
`;

exports[`Breadcrumbs examples SvgSeparatorBreadcrumbsComponent should render correctly 1`] = `
<div
  id="root5"
>
  <nav
    aria-label="breadcrumbs with svg separator"
    class="v-breadcrumbs v-breadcrumbs-custom"
    hasinlineseparator=""
    v-breadcrumbs=""
  >
    <ol>
      <li>
        <a
          class="v-link"
          href="/breadcrumbs"
          routerlink="./breadcrumbs"
          v-link=""
        >
          L1 label
        </a>
        <svg
          aria-hidden="true"
          class="v-icon v-icon-chevron-right v-icon-tiny v-icon-visa"
          focusable="false"
          height="16"
          id="a-v__icon__internal-0"
          v-icon-visa-chevron-right-tiny=""
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            class="v-icon-primary"
            clip-rule="evenodd"
            d="M5.39309 1.00049L12 8.00049L5.39309 15.0005L4 13.5245L9.21383 8.00049L4 2.47646L5.39309 1.00049Z"
            fill-rule="evenodd"
          />
        </svg>
      </li>
      <li>
        <a
          class="v-link"
          href="/breadcrumbs"
          routerlink="./breadcrumbs"
          v-link=""
        >
          L2 label
        </a>
        <svg
          aria-hidden="true"
          class="v-icon v-icon-chevron-right v-icon-tiny v-icon-visa"
          focusable="false"
          height="16"
          id="a-v__icon__internal-1"
          v-icon-visa-chevron-right-tiny=""
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            class="v-icon-primary"
            clip-rule="evenodd"
            d="M5.39309 1.00049L12 8.00049L5.39309 15.0005L4 13.5245L9.21383 8.00049L4 2.47646L5.39309 1.00049Z"
            fill-rule="evenodd"
          />
        </svg>
      </li>
      <li>
        <a
          class="v-link"
          href="/breadcrumbs"
          routerlink="./breadcrumbs"
          v-link=""
        >
          L3 label
        </a>
        <svg
          aria-hidden="true"
          class="v-icon v-icon-chevron-right v-icon-tiny v-icon-visa"
          focusable="false"
          height="16"
          id="a-v__icon__internal-2"
          v-icon-visa-chevron-right-tiny=""
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            class="v-icon-primary"
            clip-rule="evenodd"
            d="M5.39309 1.00049L12 8.00049L5.39309 15.0005L4 13.5245L9.21383 8.00049L4 2.47646L5.39309 1.00049Z"
            fill-rule="evenodd"
          />
        </svg>
      </li>
      <li>
        <span
          aria-current="page"
        >
          L4 label
        </span>
      </li>
    </ol>
  </nav>
</div>
`;
